--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Gleysson Nunes" />
         <title>Stats Preview Card Component</title>
         <link rel="stylesheet" href="styles/index.css" />
-        <link rel="shortcut icon" href="styles/assets/favicon.svg" type="image/x-icon" />
+        <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -16,5 +16,10 @@
             rel="stylesheet"
         />
     </head>
-    <body></body>
+    <body>
+        <header>
+            <img src="assets/image-mobile.jpg" alt="" />
+            <h1>Get insights that help your business grow.</h1>
+        </header>
+    </body>
 </html>
