header css finished

--- a/index.html
+++ b/index.html
@@ -17,21 +17,23 @@
         />
     </head>
     <body>
-        <header>
-            <img src="assets/image-mobile.jpg" alt="" />
-            <h1>Get insights that help your business grow.</h1>
-        </header>
-        <main>
-            Discover the benefits of data analytics and make better decisions regarding revenue, customer experience,
-            and overall efficiency.
-            <ul>
-                <li>10+</li>
-                <li>COMPANIES</li>
-                <li>314</li>
-                <li>TEMPLATES</li>
-                <li>12M</li>
-                <li>QUERIES</li>
-            </ul>
-        </main>
+        <div class="container">
+            <header>
+                <img src="assets/image-mobile.jpg" alt="" />
+                <h1>Get <span class="insights">insights</span> that help your business grow.</h1>
+            </header>
+            <main>
+                Discover the benefits of data analytics and make better decisions regarding revenue, customer
+                experience, and overall efficiency.
+                <ul>
+                    <li>10+</li>
+                    <li>COMPANIES</li>
+                    <li>314</li>
+                    <li>TEMPLATES</li>
+                    <li>12M</li>
+                    <li>QUERIES</li>
+                </ul>
+            </main>
+        </div>
     </body>
 </html>
