--- a/index.html
+++ b/index.html
@@ -19,19 +19,29 @@
     <body>
         <div class="container">
             <header>
-                <img src="assets/image-mobile.jpg" alt="" />
-                <h1>Get <span class="insights">insights</span> that help your business grow.</h1>
+                <img src="assets/image-header-mobile.jpg" alt="Women in the office" />
+                <h1 class="text-align-center width-50 color-white">
+                    Get <span class="insights">insights</span> that help your business grow.
+                </h1>
             </header>
             <main>
-                Discover the benefits of data analytics and make better decisions regarding revenue, customer
-                experience, and overall efficiency.
-                <ul>
-                    <li>10+</li>
-                    <li>COMPANIES</li>
-                    <li>314</li>
-                    <li>TEMPLATES</li>
-                    <li>12M</li>
-                    <li>QUERIES</li>
+                <p class="paragraph text-align-center width-50 color-gray font-size-1-3">
+                    Discover the benefits of data analytics and make better decisions regarding revenue, customer
+                    experience, and overall efficiency.
+                </p>
+                <ul class="text-align-center">
+                    <div class="itens-list">
+                        <li class="color-white">10k +</li>
+                        <li class="color-gray font-size-1-3">COMPANIES</li>
+                    </div>
+                    <div class="itens-list">
+                        <li class="color-white">314</li>
+                        <li class="color-gray font-size-1-3">TEMPLATES</li>
+                    </div>
+                    <div class="itens-list">
+                        <li class="color-white">12M +</li>
+                        <li class="color-gray font-size-1-3">QUERIES</li>
+                    </div>
                 </ul>
             </main>
         </div>
