tablet version finished

--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
                 </h1>
             </header>
             <main>
-                <p class="paragraph text-align-center width-50 color-gray font-size-1-3">
+                <p class="paragraph text-align-center width-50 color-gray">
                     Discover the benefits of data analytics and make better decisions regarding revenue, customer
                     experience, and overall efficiency.
                 </p>
                 <ul class="text-align-center">
-                    <div class="itens-list">
+                    <div class="items-list">
                         <li class="color-white">10k +</li>
-                        <li class="color-gray font-size-1-3">COMPANIES</li>
+                        <li class="color-gray name-list">COMPANIES</li>
                     </div>
-                    <div class="itens-list">
+                    <div class="items-list">
                         <li class="color-white">314</li>
-                        <li class="color-gray font-size-1-3">TEMPLATES</li>
+                        <li class="color-gray name-list">TEMPLATES</li>
                     </div>
-                    <div class="itens-list">
+                    <div class="items-list">
                         <li class="color-white">12M +</li>
-                        <li class="color-gray font-size-1-3">QUERIES</li>
+                        <li class="color-gray name-list">QUERIES</li>
                     </div>
                 </ul>
             </main>
