laptop version finished

--- a/index.html
+++ b/index.html
@@ -18,31 +18,35 @@
     </head>
     <body>
         <div class="container">
-            <header>
-                <img src="assets/image-header-mobile.jpg" alt="Women in the office" />
-                <h1 class="text-align-center width-50 color-white">
-                    Get <span class="insights">insights</span> that help your business grow.
-                </h1>
-            </header>
-            <main>
-                <p class="paragraph text-align-center width-50 color-gray">
-                    Discover the benefits of data analytics and make better decisions regarding revenue, customer
-                    experience, and overall efficiency.
-                </p>
-                <ul class="text-align-center">
-                    <div class="items-list">
-                        <li class="color-white">10k +</li>
-                        <li class="color-gray name-list">COMPANIES</li>
-                    </div>
-                    <div class="items-list">
-                        <li class="color-white">314</li>
-                        <li class="color-gray name-list">TEMPLATES</li>
-                    </div>
-                    <div class="items-list">
-                        <li class="color-white">12M +</li>
-                        <li class="color-gray name-list">QUERIES</li>
-                    </div>
-                </ul>
+            <div class="title-paragraph-content">
+                <header>
+                    <img class="mobile-image" src="assets/image-header-mobile.jpg" alt="Women in the office" />
+                    <h1 class=" width-50 color-white">
+                        Get <span class="insights">insights</span> that help your business grow.
+                    </h1>
+                </header>
+                <main>
+                    <p class="paragraph width-50 color-gray">
+                        Discover the benefits of data analytics and make better decisions regarding revenue, customer
+                        experience, and overall efficiency.
+                    </p>
+                    <ul>
+                        <div class="items-list">
+                            <li class="color-white">10k+</li>
+                            <li class="color-gray name-list">COMPANIES</li>
+                        </div>
+                        <div class="items-list">
+                            <li class="color-white">314</li>
+                            <li class="color-gray name-list">TEMPLATES</li>
+                        </div>
+                        <div class="items-list">
+                            <li class="color-white">12M+</li>
+                            <li class="color-gray name-list">QUERIES</li>
+                        </div>
+                    </ul>
+            </div>
+                <div class="desktop-image">
+                </div>
             </main>
         </div>
     </body>
